...
    func didTapOnRegister() {
        
        let validators = checkValidators()
        
        if validators.isEmpty {
            saveUser()
            alertMessage = "Registration Successful!"
            showingAlert = true
            return
        }
        
        self.missingValidators = validators
        
...
